# ComfyUI-RecipeMerge

./: LICENSE  README.md  __init__.py  pyproject.toml  recipe_parser.py  test_parser.py
presets/: body2_face1_SDXL.json  body2_face1_faceguard_SDXL.json
web/: elemental_matrix.js
